k8s/frontend/manifests/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/part-of: greeting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/part-of: greeting-app
    spec:
      containers:
        - name: frontend
          image: image-registry.openshift-image-registry.svc:5000/5b7aa5-dev/frontend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-temp
              mountPath: /tmp/nginx/cache
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-temp
          emptyDir: {}
